Implemented first Multi-page logic - Added Generic Level layout "GameView" - Added Level 1 inherited from GameView - Added Level 2 inherited from GameView - Added Main Menu where App starts now - Improved scaling logic (Sizing, Movement based on the size of the Scene) - Changed Level layout (Added gutters to the left and right of the Scene) - A lot of minor improvements and fixes overall

--- a/RaindropFall/RaindropFall.csproj
+++ b/RaindropFall/RaindropFall.csproj
@@ -66,4 +66,24 @@
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="9.0.120" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <MauiXaml Update="Views\GameView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Pages\Level1Page.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Pages\Level2Page.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Pages\MainMenuPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Pages\" />
+	  <Folder Include="Views\" />
+	</ItemGroup>
+
 </Project>
